--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,2 @@
-custom: [ 'https://paypal.me/AkarinLiu' ]
+# These are supported funding model platforms
+custom: ['https://www.paypal.me/AkarinLiu']
