--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,4 @@
 # These are supported funding model platforms
 custom: ['https://www.paypal.me/AkarinLiu']
+custon: ['https://github.com/AkarinLiu/AkarinLiu/raw/master/alipay.jpg']
+custon: ['https://github.com/AkarinLiu/AkarinLiu/raw/master/wechat.jpg']
