--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,3 @@
 # These are supported funding model platforms
 custom: ['https://www.paypal.me/AkarinLiu']
+custon: ['https://afdian.net/a/AkarinLiu']
