--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 # These are supported funding model platforms
-custom: ['https://www.paypal.me/AkarinLiu']
+custom: ['https://www.paypal.me/AkarinLiu','https://afdian.net/a/AkarinLiu']
